@startuml
Solution45 o-- WordReplacer
Solution45 o-- FileWriter

class Solution45 {
-{static} final Scanner in
-{static} final Path PATH_TO_READ_FROM
-{static} final String ROOT_PATH_TO_WRITE_TO
+void main()
-{static} safeGetPath(String userString)
}

class WordReplacer {
-{static} final String WORD_TO_REPLACE
-{static} final String WORD_TO_REPLACE_WITH
-final String stringToModify
+String replaceWordsInString()
}

class FileWriter {
-final Path pathToWriteTo;
-final String stringToWrite;
+void writeFile()
}
@enduml